<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="false"
        app:behavior_peekHeight="90dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="If this product is not available"
            android:textColor="@color/black"
            android:textSize="@dimen/textextra_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioProductAvailGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <RadioButton
                android:id="@+id/radioRemove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/red"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center|start"
                android:text="@string/remove_order"
                android:textColor="@color/black"
                android:textSize="@dimen/textsmall" />

            <RadioButton
                android:id="@+id/radioCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:buttonTint="@color/red"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center|start"
                android:text="@string/cancel_order"
                android:textColor="@color/black"
                android:textSize="@dimen/textsmall" />

            <RadioButton
                android:id="@+id/radioCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:buttonTint="@color/red"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center|start"
                android:text="@string/call_confirm"
                android:textColor="@color/black"
                android:textSize="@dimen/textsmall" />
        </RadioGroup>

        <TextView
            android:id="@+id/btnApply"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:background="@color/red"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/btn_apply"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/textlarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/radioProductAvailGroup"
            app:layout_constraintStart_toStartOf="@+id/radioProductAvailGroup"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <View
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/grey_vlight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/radioProductAvailGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioProductAvailGroup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>